--- a/src/app/components/bet-form/bet-form.component.html
+++ b/src/app/components/bet-form/bet-form.component.html
@@ -1,3 +1,46 @@
-<p>
-  bet-form works!
-</p>
+<div class="currencies text-center">
+  <div class="container">
+    <i class="fa fa-btc fa-2x" aria-hidden="true"></i>
+    <i class="fa fa-long-arrow-right fa-2x" aria-hidden="true"></i>
+    <i class="fa fa-inr fa-2x" aria-hidden="true"></i>
+  </div>
+</div>
+
+<div class="previous card bg-light center">
+  <div class="card-header">
+    Previous
+  </div>
+  <div class="card-body text-center">
+    <h3 class="card-text"><i class="fa fa-inr fa" aria-hidden="true"></i>495,663</h3>
+  </div>
+  <div class="card-footer text-muted">
+    10 minutes ago
+  </div>
+</div>
+
+<div class="current card text-white bg-info center">
+  <div class="card-header">
+    Current
+  </div>
+  <div class="card-body text-center">
+    <h3 class="card-text"><i class="fa fa-inr fa" aria-hidden="true"></i>495,663</h3>
+  </div>
+</div>
+
+<div class="current card center">
+  <div class="card-header">
+    Your Bet
+  </div>
+  <div class="card-body text-center">
+    <form (submit)="placeBet()">
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon" id="basic-addon1"><i class="fa fa-inr" aria-hidden="true"></i></span>
+          <input type="number" class="form-control" [(ngModel)]='bet' name='bet'>
+        </div>
+        <small id="betHelp" class="form-text text-muted">Prepopulated with the average. Go ahead and change it</small>
+      </div>
+      <button type="submit" class="btn btn-primary">Bet</button>
+    </form>
+  </div>
+</div>
