--- a/src/app/components/bet-form/bet-form.component.html
+++ b/src/app/components/bet-form/bet-form.component.html
@@ -11,7 +11,7 @@
     Previous
   </div>
   <div class="card-body text-center">
-    <h3 class="card-text"><i class="fa fa-inr fa" aria-hidden="true"></i>495,663</h3>
+    <h3 class="card-text"><i class="fa fa-inr fa" aria-hidden="true"></i>{{previous}}</h3>
   </div>
   <div class="card-footer text-muted">
     10 minutes ago
@@ -23,7 +23,7 @@
     Current
   </div>
   <div class="card-body text-center">
-    <h3 class="card-text"><i class="fa fa-inr fa" aria-hidden="true"></i>495,663</h3>
+    <h3 class="card-text"><i class="fa fa-inr fa" aria-hidden="true"></i>{{current}}</h3>
   </div>
 </div>
 
