--- a/src/app/components/bet-form/bet-form.component.html
+++ b/src/app/components/bet-form/bet-form.component.html
@@ -1,44 +1,48 @@
-<div class="currencies text-center">
+<!--<div class="currencies text-center">
   <div class="container">
     <i class="fa fa-btc fa-2x" aria-hidden="true"></i>
     <i class="fa fa-long-arrow-right fa-2x" aria-hidden="true"></i>
     <i class="fa fa-inr fa-2x" aria-hidden="true"></i>
   </div>
-</div>
+</div>-->
+
+<h4 class="text-center heading">Predict price of Bitcoin at {{hour+1}}:00</h4>
 
 <div class="previous card bg-light center">
   <div class="card-header">
     Previous
   </div>
   <div class="card-body text-center">
-    <h3 class="card-text"><i class="fa fa-inr fa" aria-hidden="true"></i>{{previous}}</h3>
+    <h3 class="card-text"><i class="fa fa-inr fa" aria-hidden="true"></i> {{previous}}</h3>
   </div>
   <div class="card-footer text-muted">
-    10 minutes ago
+    At {{hour}}:00
+    <p class="card-text pull-right"><small class="text-muted">Powered by Coindesk</small></p>
   </div>
+
 </div>
 
-<div class="current card text-white bg-info center">
+<div class="wallet card center text-white bg-info">
   <div class="card-header">
-    Current
+    Wallet Balance
   </div>
   <div class="card-body text-center">
-    <h3 class="card-text"><i class="fa fa-inr fa" aria-hidden="true"></i>{{current}}</h3>
+    <h3 class="card-text">{{balance}} PslCoins</h3>
   </div>
 </div>
 
 <div class="current card center">
   <div class="card-header">
-    Your Bet
+    Your Prediction
   </div>
   <div class="card-body text-center">
-    <form (submit)="placeBet()">
+    <form (submit)="makePrediction(prediction.value)">
       <div class="form-group">
         <div class="input-group">
           <span class="input-group-addon" id="basic-addon1"><i class="fa fa-inr" aria-hidden="true"></i></span>
-          <input type="number" class="form-control" [(ngModel)]='bet' name='bet'>
+          <input type="number" class="form-control" #prediction>
         </div>
-        <small id="betHelp" class="form-text text-muted">Prepopulated with the average. Go ahead and change it</small>
+        <small id="betHelp" class="form-text text-muted">Bet will be {{coins}} PslCoins </small>
       </div>
       <button type="submit" class="btn btn-primary">Bet</button>
     </form>
