--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,3 +1,29 @@
-<p>
-  sign-in works!
-</p>
+<div class="card text-center">
+  <div class="card-header">
+    <ul class="nav nav-tabs justify-content-center card-header-tabs">
+      <li class="nav-item">
+        <button class="btn btn-link nav-link active" (click)="authTypeChange(false)" role="tab" data-toggle="tab">Sign In</button>
+      </li>
+      <li class="nav-item">
+        <button class="btn btn-link nav-link" (click)="authTypeChange(true)" role="tab" data-toggle="tab">Sign Up</button>
+      </li>
+    </ul>
+  </div>
+  <div class="card-body">
+    <form (submit)="userAuth(username.value, password.value)">
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-user-o" aria-hidden="true"></i></span>
+          <input type="text" class="form-control" placeholder="Username" #username>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="fa fa-lock" aria-hidden="true"></i></span>
+          <input type="password" class="form-control" placeholder="Password" #password>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">{{ newUser ? 'Sign Up' : 'Sign In' }}</button>
+    </form>
+  </div>
+</div>
