--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="#" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" routerLink='/'>Home</a>
-      <a class="nav-item nav-link" href="#" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" routerLink='scores'>Scores</a>
+      <a class="nav-item nav-link" href="#" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" routerLink='leaderboard'>Leaderboard</a>
     </div>
   </div>
 </nav>
