--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -3,7 +3,7 @@
     <h3>Leaderboard</h3>
   </div>
   <br>
-  <div class="card w-90" *ngFor="let leader of leaders; let i = index">
+  <div class="card w-90" *ngFor="let leader of leaders | orderBy : 'balance': true; let i = index">
     <div class="card-body">
       <h4 class="card-title">{{i+1}}. {{leader.username}}
         <i *ngIf="i==0 && leader.balance > 0" class="first pull-right fa fa-trophy" aria-hidden="true"></i>
