Signout: only button

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="#" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" routerLink='/'>Predict</a>
       <a class="nav-item nav-link" href="#" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" routerLink='leaderboard'>Leaderboard</a>
+      <a class="nav-item nav-link" href="#" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" routerLink='sign-in'>Logout</a>
     </div>
   </div>
 </nav>
